# django_portfolio

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  db.sqlite3  django_project.sqlite3  entrypoint.sh  project_backup.json  pyproject.toml  requirements.txt  setup.cfg  sitemaps.py
.github/workflows/: config.yml
accounts/: admin.py  models.py  tests.py  translation.py
accounts/migrations/: 0001_initial.py
accounts/tests/: test_models.py
contact/: admin.py  forms.py  models.py  urls.py  views.py
contact/migrations/: 0001_initial.py  0002_alter_category_options_alter_contactrequest_options_and_more.py
contact/templates/: contact.html
contact/tests/: test_forms.py  test_models.py  test_views.py
core/: urls.py  views.py
core/templates/: 404.html  500.html  base.html  contact.html  impressum.html  messages.html  portfolio.html  privacy.html  resume.html
core/tests/: test_views.py
doridoro/: admin.py  apps.py  models.py  tests.py  translation.py  urls.py  views.py
doridoro/migrations/: 0001_initial.py  0002_initial.py  0003_alter_job_company_name_alter_job_company_name_de_and_more.py  0004_alter_degree_url_alter_job_until_present.py
doridoro/templates/: about.html  achievements.html  index.html  resume.html  skills.html
doridoro/tests/: test_models.py  test_views.py
journal/: admin.py  models.py  tests.py  urls.py  views.py
portfolio/: settings-ci.py  settings-local-template.py  settings.py  urls.py
projects/: admin.py  models.py  tests.py  translation.py  urls.py  views.py
(+76 files in other folders)
